// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render SearchHitItem NON_PUBLIC correctly 1`] = `
<article>
  <Link
    className="fdk-a-search-hit"
    replace={false}
    title="Dataset: AAMarkagrensen Oslo Kommune og nærliggende kommuner"
    to="/datasets/3645d5a8-6689-4fc1-8684-d3d6c2d47386"
  >
    <span
      aria-hidden="false"
      className="uu-invisible"
    >
      Søketreff.
    </span>
    <div
      className="fdk-container-search-hit"
    >
      <header>
        <SearchHitHeader
          provenance={
            Object {
              "code": "vedtak",
              "prefLabel": Object {
                "nb": "Vedtak",
              },
              "uri": "http://data.brreg.no/datakatalog/provenance/vedtak",
            }
          }
          publisher={
            Object {
              "id": "987654321",
              "name": "TESTETATEN",
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/987654321",
            }
          }
          publisherItems={null}
          publisherLabel="Owned by"
          tag="h2"
          theme={
            Array [
              Object {
                "title": Object {
                  "nb": "Forvaltning og offentlig støtte",
                },
                "uri": "http://publications.europa.eu/resource/authority/data-theme/GOVE",
              },
              Object {
                "title": Object {
                  "nb": "Miljø",
                },
                "uri": "http://publications.europa.eu/resource/authority/data-theme/ENVI",
              },
            ]
          }
          title="AAMarkagrensen Oslo Kommune og nærliggende kommuner"
          titleLink={null}
        />
      </header>
      <p
        className="fdk-p-search-hit"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Beskrivelse av datasettet,
        </span>
        Datasettet avgrenser område for virkeområdet til lov 6. juni 2009 nr. 35 om naturområder i Oslo og nærliggende kommuner (markaloven) som trådte i kraft 1. september 2009. Markalovens virkeområde er fastsatt i forskrift 4...
      </p>
      <div
        className="fdk-container-distributions fdk-distributions-red"
      >
        <strong>
          Non public
        </strong>
        <div />
        <div
          id="search-hit-sample"
        >
          Sample data are available
        </div>
      </div>
    </div>
  </Link>
</article>
`;

exports[`should render SearchHitItem PUBLIC correctly 1`] = `
<article>
  <Link
    className="fdk-a-search-hit"
    replace={false}
    title="Dataset: AAMarkagrensen Oslo Kommune og nærliggende kommuner"
    to="/datasets/3645d5a8-6689-4fc1-8684-d3d6c2d47386"
  >
    <span
      aria-hidden="false"
      className="uu-invisible"
    >
      Søketreff.
    </span>
    <div
      className="fdk-container-search-hit"
    >
      <header>
        <SearchHitHeader
          provenance={
            Object {
              "code": "vedtak",
              "prefLabel": Object {
                "nb": "Vedtak",
              },
              "uri": "http://data.brreg.no/datakatalog/provenance/vedtak",
            }
          }
          publisher={null}
          publisherItems={null}
          publisherLabel="Owned by"
          tag="h2"
          theme={
            Array [
              Object {
                "title": Object {
                  "nb": "Forvaltning og offentlig støtte",
                },
                "uri": "http://publications.europa.eu/resource/authority/data-theme/GOVE",
              },
              Object {
                "title": Object {
                  "nb": "Miljø",
                },
                "uri": "http://publications.europa.eu/resource/authority/data-theme/ENVI",
              },
            ]
          }
          title="AAMarkagrensen Oslo Kommune og nærliggende kommuner"
          titleLink={null}
        />
      </header>
      <p
        className="fdk-p-search-hit"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Beskrivelse av datasettet,
        </span>
        Datasettet avgrenser område for virkeområdet til lov 6. juni 2009 nr. 35 om naturområder Datasettes formål er nullam quis rius eget urna mollis ornare vel eu leo. Praesent commo ...
      </p>
      <div
        className="fdk-container-distributions fdk-distributions-green"
      >
        <strong>
          Public
        </strong>
      </div>
    </div>
  </Link>
</article>
`;

exports[`should render SearchHitItem RESTRICTED correctly 1`] = `
<article>
  <Link
    className="fdk-a-search-hit"
    replace={false}
    title="Dataset: AAMarkagrensen Oslo Kommune og nærliggende kommuner"
    to="/datasets/3645d5a8-6689-4fc1-8684-d3d6c2d47386"
  >
    <span
      aria-hidden="false"
      className="uu-invisible"
    >
      Søketreff.
    </span>
    <div
      className="fdk-container-search-hit"
    >
      <header>
        <SearchHitHeader
          provenance={
            Object {
              "code": "vedtak",
              "prefLabel": Object {
                "nb": "Vedtak",
              },
              "uri": "http://data.brreg.no/datakatalog/provenance/vedtak",
            }
          }
          publisher={
            Object {
              "id": "987654321",
              "name": "TESTETATEN",
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/987654321",
            }
          }
          publisherItems={null}
          publisherLabel="Owned by"
          tag="h2"
          theme={
            Array [
              Object {
                "title": Object {
                  "nb": "Forvaltning og offentlig støtte",
                },
                "uri": "http://publications.europa.eu/resource/authority/data-theme/GOVE",
              },
              Object {
                "title": Object {
                  "nb": "Miljø",
                },
                "uri": "http://publications.europa.eu/resource/authority/data-theme/ENVI",
              },
            ]
          }
          title="AAMarkagrensen Oslo Kommune og nærliggende kommuner"
          titleLink={null}
        />
      </header>
      <p
        className="fdk-p-search-hit"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Beskrivelse av datasettet,
        </span>
        Datasettet avgrenser område for virkeområdet til lov 6. juni 2009 nr. 35 om naturområder i Oslo og nærliggende kommuner (markaloven) som trådte i kraft 1. september 2009. Markalovens virkeområde er fastsatt i forskrift 4...
      </p>
      <div
        className="fdk-container-distributions fdk-distributions-yellow"
      >
        <strong>
          Restricted
        </strong>
        <div>
          <DistributionFormat
            code="RESTRICTED"
            key="dataset-distribution-format0"
            text="application/json"
            type={null}
          />
          <DistributionFormat
            code="RESTRICTED"
            key="dataset-distribution-format1"
            text="xml"
            type={null}
          />
        </div>
        <div
          id="search-hit-sample"
        >
          Sample data are available
        </div>
      </div>
    </div>
  </Link>
</article>
`;

exports[`should render SearchHitItem with distribution type correctly 1`] = `
<article>
  <Link
    className="fdk-a-search-hit"
    replace={false}
    title="Dataset: AAMarkagrensen Oslo Kommune og nærliggende kommuner"
    to="/datasets/3645d5a8-6689-4fc1-8684-d3d6c2d47386"
  >
    <span
      aria-hidden="false"
      className="uu-invisible"
    >
      Søketreff.
    </span>
    <div
      className="fdk-container-search-hit"
    >
      <header>
        <SearchHitHeader
          provenance={
            Object {
              "code": "vedtak",
              "prefLabel": Object {
                "nb": "Vedtak",
              },
              "uri": "http://data.brreg.no/datakatalog/provenance/vedtak",
            }
          }
          publisher={null}
          publisherItems={null}
          publisherLabel="Owned by"
          tag="h2"
          theme={
            Array [
              Object {
                "title": Object {
                  "nb": "Forvaltning og offentlig støtte",
                },
                "uri": "http://publications.europa.eu/resource/authority/data-theme/GOVE",
              },
              Object {
                "title": Object {
                  "nb": "Miljø",
                },
                "uri": "http://publications.europa.eu/resource/authority/data-theme/ENVI",
              },
            ]
          }
          title="AAMarkagrensen Oslo Kommune og nærliggende kommuner"
          titleLink={null}
        />
      </header>
      <p
        className="fdk-p-search-hit"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Beskrivelse av datasettet,
        </span>
        Datasettet avgrenser område for virkeområdet til lov 6. juni 2009 nr. 35 om naturområder Datasettes formål er nullam quis rius eget urna mollis ornare vel eu leo. Praesent commo ...
      </p>
      <div
        className="fdk-container-distributions fdk-distributions-green"
      >
        <strong>
          Public
        </strong>
        <div>
          <DistributionFormat
            code="PUBLIC"
            key="dataset-distribution-format0"
            text="xml"
            type="Downloadable file"
          />
          <DistributionFormat
            code="PUBLIC"
            key="dataset-distribution-format1"
            text="tekst"
            type="Downloadable file"
          />
          <DistributionFormat
            code="PUBLIC"
            key="dataset-distribution-format2"
            text="json"
            type="Downloadable file"
          />
          <DistributionFormat
            code="PUBLIC"
            key="dataset-distribution-format0"
            text="xml"
            type={null}
          />
          <DistributionFormat
            code="PUBLIC"
            key="dataset-distribution-format1"
            text="tekst"
            type={null}
          />
          <DistributionFormat
            code="PUBLIC"
            key="dataset-distribution-format2"
            text="json"
            type={null}
          />
        </div>
      </div>
    </div>
  </Link>
</article>
`;

exports[`should render SearchHitItem with no title, description, accessRights and distribution with no format correctly 1`] = `
<article>
  <Link
    className="fdk-a-search-hit"
    replace={false}
    title="Dataset: undefined"
    to="/datasets/3645d5a8-6689-4fc1-8684-d3d6c2d47386"
  >
    <span
      aria-hidden="false"
      className="uu-invisible"
    >
      Søketreff.
    </span>
    <div
      className="fdk-container-search-hit"
    >
      <header>
        <SearchHitHeader
          provenance={
            Object {
              "code": "vedtak",
              "prefLabel": Object {
                "nb": "Vedtak",
              },
              "uri": "http://data.brreg.no/datakatalog/provenance/vedtak",
            }
          }
          publisher={
            Object {
              "id": "987654321",
              "name": "TESTETATEN",
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/987654321",
            }
          }
          publisherItems={null}
          publisherLabel="Owned by"
          tag="h2"
          theme={null}
          title={null}
          titleLink={null}
        />
      </header>
      <p
        className="fdk-p-search-hit"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Beskrivelse av datasettet,
        </span>
      </p>
      <div
        className=""
      >
        <strong />
        <div />
      </div>
    </div>
  </Link>
</article>
`;
